--- a/index.html
+++ b/index.html
@@ -2,71 +2,43 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Laporan Proyek MPPL</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laporan MPPL</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <style>
-    body { font-family: 'Segoe UI', sans-serif; padding: 2rem; background: #f9f9f9; color: #333; }
-    header { background: #0056b3; color: white; padding: 1.5rem; text-align: center; }
-    h1, h2, h3 { color: #0056b3; }
-    nav { margin: 1rem 0; background: #e0e0e0; padding: 1rem; }
-    nav a { margin-right: 1rem; color: #0056b3; text-decoration: none; }
+    body { font-family: Arial, sans-serif; margin: 2rem; background: #eef6fb; color: #003366; }
+    header { background: #0056b3; color: white; padding: 1rem; text-align: center; }
+    nav a { margin: 0 1rem; color: #0056b3; text-decoration: none; }
     nav a:hover { text-decoration: underline; }
-    section { margin-bottom: 2rem; }
-    table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
-    th, td { border: 1px solid #ccc; padding: 10px; text-align: left; }
-    th { background: #e3f2fd; }
-    .mockup { text-align: center; margin: 2rem 0; }
-    .mockup img { width: 80%; max-width: 600px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    section { margin-top: 2rem; }
   </style>
 </head>
 <body>
   <header>
     <h1>Laporan Tugas Besar MPPL</h1>
-    <p>Aplikasi Peminjaman Buku Perpustakaan Sederhana</p>
+    <p>Aplikasi Peminjaman Buku Perpustakaan</p>
   </header>
   <nav>
     <a href="#pendahuluan">Pendahuluan</a>
-    <a href="#perencanaan">Perencanaan</a>
-    <a href="#laporan">Laporan</a>
-    <a href="#kesimpulan">Kesimpulan</a>
-    <a href="#kontribusi">Kontribusi</a>
+    <a href="#fitur">Fitur</a>
+    <a href="#kontak">Kontak</a>
   </nav>
-
   <section id="pendahuluan">
-    <h2>I. Pendahuluan</h2>
-    <p>Aplikasi ini dibuat untuk memudahkan pencatatan peminjaman dan pengembalian buku perpustakaan yang sebelumnya dilakukan secara manual.</p>
+    <h2>Pendahuluan</h2>
+    <p>Proyek ini bertujuan untuk membuat aplikasi sederhana berbasis web untuk pencatatan peminjaman dan pengembalian buku perpustakaan.</p>
   </section>
-
-  <section id="perencanaan">
-    <h2>II. Perencanaan Proyek</h2>
-    <table>
-      <tr><th>Nama Proyek</th><td>Aplikasi Peminjaman Buku</td></tr>
-      <tr><th>Penanggung Jawab</th><td>Sifa Barqilah</td></tr>
-      <tr><th>Tanggal</th><td>9–14 Juli 2025</td></tr>
-      <tr><th>Biaya</th><td>Rp 1.500.000</td></tr>
-    </table>
+  <section id="fitur">
+    <h2>Fitur Aplikasi</h2>
+    <ul>
+      <li>Daftar Buku</li>
+      <li>Peminjaman Buku</li>
+      <li>Pengembalian Buku</li>
+    </ul>
   </section>
-
-  <section class="mockup">
-    <h2>📱 Tampilan Aplikasi</h2>
-    <img src="https://dummyimage.com/600x350/cccccc/000000&text=Mockup+Peminjaman+Buku" alt="Mockup Aplikasi">
-  </section>
-
-  <section id="laporan">
-    <h2>III. Laporan Proyek</h2>
-    <p>Semua tugas selesai tepat waktu dan sesuai rencana anggaran.</p>
-  </section>
-
-  <section id="kesimpulan">
-    <h2>IV. Kesimpulan</h2>
-    <p>Proyek berjalan lancar, aplikasi dapat digunakan dan sesuai dengan scope dan waktu yang direncanakan.</p>
-  </section>
-
-  <section id="kontribusi">
-    <h2>V. Kontribusi Anggota</h2>
-    <p>Seluruh pekerjaan dilakukan oleh Sifa Barqilah (301220035).</p>
+  <section id="kontak">
+    <h2>Kontak</h2>
+    <p>Dibuat oleh: <strong>Sifa Barqilah (301220035)</strong></p>
   </section>
 </body>
 </html>
-Tambahkan file index.html untuk GitHub Pages
